# bevy_m8

./: Cargo.toml  README.md
crates/bevy_dirtywave_m8/: Cargo.toml
crates/bevy_dirtywave_m8/src/: command.rs  display.rs  lib.rs  main.rs  serial.rs  serialport.rs  slip.rs
crates/bevy_m8/: Cargo.toml
crates/bevy_m8/src/: assets.rs  audio.rs  decoder.rs  display.rs  fonts.rs  keymap.rs  lib.rs  main.rs  remote.rs  serial.rs  utils.rs
elisp/: remote.el
