[package]
name = "bevy_dirtywave_m8"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = { workspace = true }
bevy = { workspace = true, features = [
     # Required Features
     "bevy_window",
     "bevy_winit",
     "bevy_render",
     "bevy_camera",

     # Platform Features
     "wayland",
     "x11",

     # Extra Features
     "multi_threaded",

     # Debugging
     "bevy_log",
]}
async-channel = { workspace = true }
